# frc_fp

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  compression.h  decompression.h  encoding.h  frc_fp.h  normalization.h  transformation.h
include/test/: test_compression.h  test_normalization.h  test_transformation.h
src/: common.c  compression.c  decompression.c  encoding.c  frc_fp.c  normalization.c  transformation.c
test/: test_compression.c  test_normalization.c  test_transformation.c  tests.c  unity.c
